; ModuleID = '/home/carl/AnghaBench/radare2/shlr/grub/fs/extr_jfs.c_grub_jfs_label.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/grub/fs/extr_jfs.c_grub_jfs_label.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 }
%struct.grub_jfs_data = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { i64 }

@grub_errno = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.TYPE_5__*, i8**)* @grub_jfs_label to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @grub_jfs_label(%struct.TYPE_5__* %0, i8** %1) #0 {
  %3 = alloca %struct.TYPE_5__*, align 8
  %4 = alloca i8**, align 8
  %5 = alloca %struct.grub_jfs_data*, align 8
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %3, align 8
  store i8** %1, i8*** %4, align 8
  %6 = load %struct.TYPE_5__*, %struct.TYPE_5__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = call %struct.grub_jfs_data* @grub_jfs_mount(i32 %8)
  store %struct.grub_jfs_data* %9, %struct.grub_jfs_data** %5, align 8
  %10 = load %struct.grub_jfs_data*, %struct.grub_jfs_data** %5, align 8
  %11 = icmp ne %struct.grub_jfs_data* %10, null
  br i1 %11, label %12, label %20

12:                                               ; preds = %2
  %13 = load %struct.grub_jfs_data*, %struct.grub_jfs_data** %5, align 8
  %14 = getelementptr inbounds %struct.grub_jfs_data, %struct.grub_jfs_data* %13, i32 0, i32 0
  %15 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %14, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = inttoptr i64 %16 to i8*
  %18 = call i8* @grub_strndup(i8* %17, i32 11)
  %19 = load i8**, i8*** %4, align 8
  store i8* %18, i8** %19, align 8
  br label %22

20:                                               ; preds = %2
  %21 = load i8**, i8*** %4, align 8
  store i8* null, i8** %21, align 8
  br label %22

22:                                               ; preds = %20, %12
  %23 = load i32, i32* @grub_errno, align 4
  ret i32 %23
}

declare dso_local %struct.grub_jfs_data* @grub_jfs_mount(i32) #1

declare dso_local i8* @grub_strndup(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
